feat: try background

--- a/index.html
+++ b/index.html
@@ -59,6 +59,5 @@
   <body>
     <canvas id="canvas"></canvas>
   </body>
-  <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
-  <script src="index.js"></script>
+  <script src="index.js" type="module"></script>
 </html>
