--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
 
       body {
-        /* background-color: #2c3e50; */
+        background-color: #2c3e50;
         margin: 0 0;
         padding: 0;
         font-family: "Droid Sans", "sans-serif";
