--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </head>
 
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" tabindex="1"></canvas>
   </body>
   <script src="index.js" type="module"></script>
 </html>
