feat: draw text via svg

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-  <canvas id="canvas" tabindex="1"></canvas>
+  <canvas id="canvas"></canvas>
 </body>
 <script src="index.js" type="module"></script>
 
