--- a/index.html
+++ b/index.html
@@ -23,43 +23,49 @@
     }
 
     body {
-      background-color: #2c3e50;
+      /* background-color: #2c3e50; */
+      background-color: white;
       margin: 0 0;
       padding: 0;
       font-family: "Droid Sans", "sans-serif";
       /* color: #bdc3c7; */
     }
 
-    .center {
-      width: 50%;
-      display: block;
-      margin: auto;
+    div {
+      margin: 0;
       padding: 0;
     }
 
-    h1,
-    p {
-      text-align: center;
+    #container {
+      display: grid;
+      grid-template-columns: auto 1fr;
     }
 
     #canvas {
       padding: 0;
-      margin: auto;
+      margin: 0;
       display: block;
       border-style: solid;
       border-width: 1px;
       /* font-family: "Press Start 2P"; */
     }
 
-    kbd {
-      font-size: 8pt;
+    #test {
+      position: absolute;
+      visibility: hidden;
+      height: auto;
+      width: auto;
     }
   </style>
 </head>
 
 <body>
-  <canvas id="canvas"></canvas>
+  <div id="container">
+    <canvas id="canvas"></canvas>
+    <div id="list"></div>
+  </div>
+  <div id="test"></div>
 </body>
-<script src="index.js" type="module"></script>
+<script src="index.js"></script>
 
 </html>
