--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
   </div>
   <div id="test"></div>
 </body>
+<script src="gl.js"></script>
+<script src="resource.js"></script>
 <script src="index.js"></script>
 
 </html>
