--- a/map.html
+++ b/map.html
@@ -40,14 +40,21 @@
             align-items: center;
         }
 
-        #map-id {
+        #map-id,
+        #speed-input {
             margin-right: 10px;
             padding: 5px;
+            width: 100px;
         }
 
         #load-map-btn {
             padding: 5px 10px;
             cursor: pointer;
+            margin-right: 10px;
+        }
+
+        label {
+            margin-right: 5px;
         }
     </style>
 </head>
@@ -59,6 +66,8 @@
     <div id="map-input">
         <input type="number" id="map-id" placeholder="Enter Map ID">
         <button id="load-map-btn">Load Map</button>
+        <label for="speed-input">Speed:</label>
+        <input type="number" id="speed-input" placeholder="Speed" value="2" min="1" max="10" step="1">
     </div>
 </body>
 <script src="gl.js"></script>
@@ -174,6 +183,25 @@
                         console.error('Invalid Map ID');
                     }
                 });
+
+                // Add event listener for speed input changes
+                const speedInput = document.getElementById('speed-input');
+                speedInput.addEventListener('input', () => {
+                    updateSpeed(m);
+                });
+
+                // Function to update speed
+                function updateSpeed(m) {
+                    const speed = parseInt(document.getElementById('speed-input').value);
+                    if (!isNaN(speed)) {
+                        m.set_speed(speed);
+                    } else {
+                        console.error('Invalid Speed');
+                    }
+                }
+
+                // Initial speed setup
+                updateSpeed(m);
 
                 requestAnimationFrameId = requestAnimationFrame(update);
             });
