feat: support 'blend' texture

--- a/map.html
+++ b/map.html
@@ -19,12 +19,6 @@
             padding: 0;
         }
 
-        #container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
         #canvas {
             padding: 0;
             margin: 0;
@@ -69,26 +63,59 @@
             cursor: pointer;
         }
     </style>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
 <body>
-    <div id="container">
-        <canvas id="canvas"></canvas>
-    </div>
-    <div id="map-input">
-        <select id="land-select">
-            <option value="">Select Land</option>
-        </select>
-        <select id="map-select">
-            <option value="">Select Map</option>
-        </select>
-        <button id="load-map-btn">Load Map</button>
-        <label for="speed-input">Speed:</label>
-        <input type="number" id="speed-input" placeholder="Speed" value="5" min="1" max="10" step="1">
-        <label for="toggle-tiles-checkbox">
-            <input type="checkbox" id="toggle-tiles-checkbox" checked>
-            Show Tiles
-        </label>
+    <div id="app">
+        <canvas id="canvas" ref="canvas"></canvas>
+        <div id="map-input">
+            <select v-model="selectedLand" @change="updateMapSelect">
+                <option value="">Select Land</option>
+                <option v-for="(land, landName) in mapData" :key="landName" :value="landName">
+                    {{ landName }}
+                </option>
+            </select>
+            <select v-model="selectedMap">
+                <option value="">Select Map</option>
+                <option v-for="(mapInfo, mapId) in mapData[selectedLand]" :key="mapId" :value="mapId">
+                    {{ mapInfo.mapName }}
+                </option>
+            </select>
+            <button @click="loadSelectedMap">Load Map</button>
+            <label for="speed-input">Speed:</label>
+            <input type="number" id="speed-input" v-model.number="speed" placeholder="Speed" min="1" max="10" step="1">
+            <label for="toggle-tiles-checkbox">
+                <input type="checkbox" id="toggle-tiles-checkbox" v-model="showTiles">
+                Show Tiles
+            </label>
+            <label for="toggle-background-checkbox">
+                <input type="checkbox" id="toggle-background-checkbox" v-model="showBackground">
+                Show Background
+            </label>
+            <label for="toggle-foreground-checkbox">
+                <input type="checkbox" id="toggle-foreground-checkbox" v-model="showForeground">
+                Show Foreground
+            </label>
+            <div id="layer-controls">
+                <h4>Backgrounds:</h4>
+                <div v-for="(layer, index) in backgroundLayers" :key="'bg-' + index">
+                    <label>
+                        <input type="checkbox" v-model="layer.visible"
+                            @change="updateLayerVisibility('background', index)">
+                        Background {{ index }}
+                    </label>
+                </div>
+                <h4>Foregrounds:</h4>
+                <div v-for="(layer, index) in foregroundLayers" :key="'fg-' + index">
+                    <label>
+                        <input type="checkbox" v-model="layer.visible"
+                            @change="updateLayerVisibility('foreground', index)">
+                        Foreground {{ index }}
+                    </label>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="gl.js"></script>
@@ -97,10 +124,6 @@
     (function () {
         const VWIDTH = 1366;
         const VHEIGHT = 768;
-        const gl = document.getElementById("canvas").getContext("webgl2", {});
-        gl.canvas.width = VWIDTH;
-        gl.canvas.height = VHEIGHT;
-        const glModule = setupGl(gl);
 
         const prepareResourcePromises = [];
         const stringLoader = new ResourceLoader("String.nx");
@@ -127,149 +150,193 @@
             mapLoader.start()
         );
 
-        const mapData = {};
 
-        // get map list from string.nx
-        prepareResourcePromises.push(
-            fetch("resource/String.nx/nx.json")
-                .then(res => res.json())
-                .then(json => {
-                    const landSelect = document.getElementById('land-select');
-                    for (const [landName, land] of Object.entries(json["Map.img"])) {
-                        mapData[landName] = {};
-                        const option = document.createElement('option');
-                        option.value = landName;
-                        option.textContent = landName;
-                        landSelect.appendChild(option);
+        let set_speed, set_draw_tiles, set_draw_background, set_draw_foreground, load_map, is_loaded, get_background_count, get_foreground_count, set_show_background, set_show_foreground;
 
-                        for (const [mapId, map] of Object.entries(land)) {
-                            const { mapName, mapDesc, streetName } = map;
-                            mapData[landName][mapId] = { mapName, mapDesc, streetName };
-                        }
-                    }
-
-                })
-        );
-
-        const importObject = {
-            gl: glModule,
-            resource: {
-                get_loader: (name) => {
-                    switch (name) {
-                        case "string":
-                            return stringLoader;
-                        case "map001":
-                            return map001Loader;
-                        case "map_pretty":
-                            return mapPrettyLoader;
-                        case "npc":
-                            return npcLoader;
-                        default:
-                            throw new Error(`Unknown resource loader: ${name}`);
-                    }
-                },
-                get_async_loader: (name) => {
-                    switch (name) {
-                        case "map":
-                            return mapLoader;
-                        default:
-                            throw new Error(`Unknown resource loader: ${name}`);
-                    }
-                },
-                load_image: (loader, bid) => loader.loadImage(bid),
-                get_image_loader: (loader) => loader.bmpLoader,
-                is_ready: (pollable) => pollable.ready,
-                get_result: (pollable) => pollable.value,
-            },
-            bitmap: {
-                id: (bmp) => bmp.id,
-                width: (bmp) => bmp.w,
-                height: (bmp) => bmp.h,
-                loading: (bmp) => bmp.loading === true,
-            },
-            log: {
-                debug: (msg) => console.debug(msg),
-                info: (msg) => console.info(msg),
-                warn: (msg) => console.warn(msg),
-                error: (msg) => console.error(msg),
-            },
-        }
-
-        let requestAnimationFrameId = 0;
-        let program_update = undefined;
-        function update(time = 0) {
-            program_update(time * 1000);
-            requestAnimationFrameId = requestAnimationFrame(update);
-        }
-
-        Object.assign(globalThis, importObject);
-        Promise.all(prepareResourcePromises)
-            .then(() => import("./lib/map_editor/map_editor.js"))
-            .then((m) => {
-                program_update = m.update;
-                globalThis.load_map = m.load_map;
-
-                const onkeydown = m.onkeydown;
-                const onkeyup = m.onkeyup;
-                window.addEventListener("keydown", (e) => {
-                    onkeydown(e.code);
-                });
-                window.addEventListener("keyup", (e) => {
-                    onkeyup(e.code);
-                });
-
-                const speedInput = document.getElementById('speed-input');
-                speedInput.addEventListener('input', () => updateSpeed(m));
-                function updateSpeed(m) {
-                    const speed = parseInt(speedInput.value);
-                    if (!isNaN(speed)) {
-                        m.set_speed(speed);
-                    } else {
-                        console.error('Invalid Speed');
-                    }
+        const app = Vue.createApp({
+            data() {
+                return {
+                    mapData: {},
+                    selectedLand: '',
+                    selectedMap: '',
+                    speed: 5,
+                    showTiles: true,
+                    showBackground: true,
+                    showForeground: true,
+                    backgroundLayers: [],
+                    foregroundLayers: []
                 }
-                // Initial speed setup
-                updateSpeed(m);
-
-                const toggleTilesCheckbox = document.getElementById('toggle-tiles-checkbox');
-                toggleTilesCheckbox.addEventListener('change', () => {
-                    m.set_draw_tiles(toggleTilesCheckbox.checked);
-                });
-                // Set initial button text
-                document.getElementById('toggle-tiles-checkbox').checked = true;
-
-                const landSelect = document.getElementById('land-select');
-                const mapSelect = document.getElementById('map-select');
-                const loadMapBtn = document.getElementById('load-map-btn');
-
-                landSelect.addEventListener('change', updateMapSelect);
-                loadMapBtn.addEventListener('click', loadSelectedMap);
-
-                function updateMapSelect() {
-                    const selectedLand = landSelect.value;
-                    mapSelect.innerHTML = '<option value="">Select Map</option>';
-
-                    if (selectedLand && mapData[selectedLand]) {
-                        for (const [mapId, mapInfo] of Object.entries(mapData[selectedLand])) {
-                            const option = document.createElement('option');
-                            option.value = mapId;
-                            option.textContent = mapInfo.mapName;
-                            mapSelect.appendChild(option);
-                        }
-                    }
-                }
-
-                function loadSelectedMap() {
-                    const mapId = parseInt(mapSelect.value);
+            },
+            methods: {
+                updateMapSelect() {
+                    this.selectedMap = '';
+                },
+                loadSelectedMap() {
+                    const mapId = parseInt(this.selectedMap);
                     if (!isNaN(mapId)) {
-                        m.load_map(mapId);
+                        load_map(mapId);
+                        this.updateLayerControls();
                     } else {
                         console.error('Invalid Map ID');
                     }
+                },
+                updateSpeed() {
+                    if (program_update) {
+                        set_speed(this.speed);
+                    }
+                },
+                updateDrawTiles() {
+                    if (program_update) {
+                        set_draw_tiles(this.showTiles);
+                    }
+                },
+                updateDrawBackground() {
+                    if (program_update) {
+                        set_draw_background(this.showBackground);
+                    }
+                },
+                updateDrawForeground() {
+                    if (program_update) {
+                        set_draw_foreground(this.showForeground);
+                    }
+                },
+                updateLayerControls() {
+                    // Wait for the map to load
+                    const checkLoaded = setInterval(() => {
+                        if (is_loaded()) {
+                            clearInterval(checkLoaded);
+                            const bgCount = get_background_count();
+                            const fgCount = get_foreground_count();
+
+                            this.backgroundLayers = Array(bgCount).fill().map((_, i) => ({ visible: true }));
+                            this.foregroundLayers = Array(fgCount).fill().map((_, i) => ({ visible: true }));
+                        }
+                    }, 100);
+                },
+                updateLayerVisibility(type, index) {
+                    if (type === 'background') {
+                        set_show_background(index, this.backgroundLayers[index].visible);
+                    } else if (type === 'foreground') {
+                        set_show_foreground(index, this.foregroundLayers[index].visible);
+                    }
+                }
+            },
+            watch: {
+                speed() {
+                    this.updateSpeed();
+                },
+                showTiles() {
+                    this.updateDrawTiles();
+                },
+                showBackground() {
+                    this.updateDrawBackground();
+                },
+                showForeground() {
+                    this.updateDrawForeground();
+                }
+            },
+            mounted() {
+                const gl = this.$refs.canvas.getContext("webgl2", {});
+                gl.canvas.width = VWIDTH;
+                gl.canvas.height = VHEIGHT;
+                const glModule = setupGl(gl);
+
+                const importObject = {
+                    gl: glModule,
+                    resource: {
+                        get_loader: (name) => {
+                            switch (name) {
+                                case "string":
+                                    return stringLoader;
+                                case "map001":
+                                    return map001Loader;
+                                case "map_pretty":
+                                    return mapPrettyLoader;
+                                case "npc":
+                                    return npcLoader;
+                                default:
+                                    throw new Error(`Unknown resource loader: ${name}`);
+                            }
+                        },
+                        get_async_loader: (name) => {
+                            switch (name) {
+                                case "map":
+                                    return mapLoader;
+                                default:
+                                    throw new Error(`Unknown resource loader: ${name}`);
+                            }
+                        },
+                        load_image: (loader, bid) => loader.loadImage(bid),
+                        get_image_loader: (loader) => loader.bmpLoader,
+                        is_ready: (pollable) => pollable.ready,
+                        get_result: (pollable) => pollable.value,
+                    },
+                    bitmap: {
+                        id: (bmp) => bmp.id,
+                        width: (bmp) => bmp.w,
+                        height: (bmp) => bmp.h,
+                        loading: (bmp) => bmp.loading === true,
+                    },
+                    log: {
+                        debug: (msg) => console.debug(msg),
+                        info: (msg) => console.info(msg),
+                        warn: (msg) => console.warn(msg),
+                        error: (msg) => console.error(msg),
+                    },
                 }
 
-                requestAnimationFrameId = requestAnimationFrame(update);
-            });
+                Object.assign(globalThis, importObject);
+
+                let requestAnimationFrameId = 0;
+                let program_update = undefined;
+                function update(time) {
+                    program_update(time * 1000);
+                    requestAnimationFrameId = requestAnimationFrame(update);
+                }
+                Promise.all(prepareResourcePromises)
+                    .then(() => import("./lib/map_editor/map_editor.js"))
+                    .then((m) => {
+                        program_update = m.update;
+                        load_map = m.load_map;
+                        set_speed = m.set_speed;
+                        set_draw_tiles = m.set_draw_tiles;
+                        set_draw_background = m.set_draw_background;
+                        set_draw_foreground = m.set_draw_foreground;
+                        is_loaded = m.is_loaded;
+                        get_background_count = m.get_background_count;
+                        get_foreground_count = m.get_foreground_count;
+                        set_show_background = m.set_show_background;
+                        set_show_foreground = m.set_show_foreground;
+
+                        const onkeydown = m.onkeydown;
+                        const onkeyup = m.onkeyup;
+                        window.addEventListener("keydown", (e) => {
+                            onkeydown(e.code);
+                        });
+                        window.addEventListener("keyup", (e) => {
+                            onkeyup(e.code);
+                        });
+
+                        requestAnimationFrameId = requestAnimationFrame(update);
+                    });
+                // Load map data
+                fetch("resource/String.nx/nx.json")
+                    .then(res => res.json())
+                    .then(json => {
+                        this.mapData = Object.entries(json["Map.img"]).reduce((acc, [landName, land]) => {
+                            acc[landName] = Object.entries(land).reduce((mapAcc, [mapId, map]) => {
+                                const { mapName, mapDesc, streetName } = map;
+                                mapAcc[mapId] = { mapName, mapDesc, streetName };
+                                return mapAcc;
+                            }, {});
+                            return acc;
+                        }, {});
+                    });
+            }
+        });
+
+        // Mount the Vue app after everything is set up
+        app.mount('#app');
     })()
 </script>
 
