feat: load item data async

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   </div>
   <div id="test"></div>
 </body>
-<script src="gl.js"></script>
-<script src="resource.js"></script>
-<script src="index.js"></script>
+<script src="gl.js" type="module"></script>
+<script src="resource.js" type="module"></script>
+<script src="index.js" type="module"></script>
 
 </html>
