refactor: use vite

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
 
 <body>
   <div id="app"></div>
+  <script src="/src/index.js" type="module"></script>
 </body>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="gl.js" type="module"></script>
-<script src="resource.js" type="module"></script>
-<script src="ui.js" type="module"></script>
-<script src="index.js" type="module"></script>
 
 </html>
